[package]
name = "ndn-tlv-derive"
description = "Derive functionality for ndn-tlv"
version = "0.3.0"
edition = "2021"
license = "MIT"
categories = ["network-programming", "parsing"]
keywords = ["ndn", "named", "data", "networking", "tlv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deluxe = "0.5.0"
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = "2.0.48"

[lib]
proc-macro = true
